--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -25,9 +25,10 @@
                 <option value="yen">Japanese Yen (¥)</option>
             </select>
 
-            <label for="tipPercentage">Tip Percentage:</label>
+            <label for="tipPercentage">Tip:</label>
             <input type="range" id="tipPercentage" min="0" max="100" value="0">
 
+            <label for="tipPercentage">Tip Percentage:</label>
             <input type="text" id="tipPercentageDisplay" value="0%" disabled>
 
             <label for="tipAmount">Converted Tip Amount:</label>
